# compendium

./: .gitignore  CLAUDE.md  Compendium.entitlements  README.md  compendium-prd-final.md  compendium-user-stories-full.md  compendium.spec  pyproject.toml  setup_app.py
extension/: DEPRECATED.md  background.js  content.js  manifest.json  popup.html  popup.js
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  styles.css
frontend/src/components/: Markdown.svelte
frontend/src/lib/: api.ts  format.test.ts  format.ts
frontend/src/pages/: Chat.svelte  Compile.svelte  Graph.svelte  Ingest.svelte  Lint.svelte  Outputs.svelte  Outputs.test.ts  Search.svelte  Search.test.ts  Settings.svelte  Status.svelte  Viewer.svelte
prompts/: detect_conflicts.md  extract_concepts.md  generate_article.md  patch_article.md  qa_answer.md  strip_source.md  summarize.md
scripts/: build_app.sh
src/compendium/: __init__.py  cli.py  server.py
src/compendium/core/: __init__.py  config.py  frontmatter.py  templates.py  wiki_fs.py  wikilinks.py
src/compendium/daemon/: __init__.py  engine.py  menubar.py  menubar_entry.py  run.py  service.py
src/compendium/ingest/: __init__.py  apple_books.py  dedup.py  media.py  (+4 more)
tests/: test_apple_books.py  test_archive.py  test_clip.py  test_core.py  test_daemon.py  test_gaps.py  test_ingestion.py  test_lint.py  test_llm.py  test_media.py  test_pipeline.py  test_qa.py  test_search.py  test_server.py  test_watch.py
tests/fixtures/: sample_source_1.md  sample_source_2.md  sample_source_3.md
(+31 files in other folders)
